# cotyledon

./: .coveragerc  .drone.yml  .gitignore  .gitreview  .mergify.yml  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: release.yml
.github/workflows/: ci.yaml  release.yml
cotyledon/: __init__.py  _service.py  _service_manager.py  _service_worker.py  _utils.py  childprocess.py  oslo_config_glue.py  types.py
cotyledon/tests/: base.py  examples.py  test_cotyledon.py  test_functional.py  test_unit.py
doc/source/: api.rst  code-examples.rst  conf.py  control-examples.rst  examples.rst  index.rst  installation.rst  non-posix-support.rst  oslo-service-migration.rst
