[metadata]
name = cotyledon
summary = Cotyledon provides a framework for defining long-running services.
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
home-page = https://github.com/sileht/cotyledon
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    cotyledon

[entry_points]
console_scripts =
    cotyledon-example = cotyledon.tests.examples:example_app

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cotyledon/locale
domain = cotyledon

[update_catalog]
domain = cotyledon
output_dir = cotyledon/locale
input_file = cotyledon/locale/cotyledon.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cotyledon/locale/cotyledon.pot

[wheel]
universal = 1
