[metadata]
name = cotyledon
summary = Cotyledon provides a framework for defining long-running services.
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
home-page = https://github.com/sileht/cotyledon
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    cotyledon

[extras]
test =
    mock
    pytest
    pytest-cov
    pytest-xdist
oslo =
    oslo.config>=3.14.0  # Apache-2.0
doc =
    sphinx_rtd_theme
    sphinx

[entry_points]
oslo.config.opts =
    cotyledon = cotyledon.oslo_config_glue:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
