[metadata]
name = cotyledon
summary = Cotyledon provides a framework for defining long-running services.
description_file = README.rst
author = Mehdi Abaakouk
author_email = sileht@sileht.net
home_page = https://github.com/sileht/cotyledon
python_requires = >= 3.8
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    cotyledon

include_package_data = true

install_requires =
  setproctitle; sys_platform != 'win32'

[options.extras_require]
test =
    mock
    pytest
    pytest-cov
    pytest-xdist
oslo =
    oslo.config>=3.14.0  # Apache-2.0
doc =
    sphinx_rtd_theme
    sphinx

[options.entry_points]
oslo.config.opts =
    cotyledon = cotyledon.oslo_config_glue:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
